Fixing .nav flex-wrap

--- a/css/style.css
+++ b/css/style.css
@@ -131,3 +131,7 @@ p {
 button:hover {
   cursor: pointer;
   }
+
+.nav {
+  flex-wrap: nowrap;
+  }
